#114 - first pass of Sequential Tree Scan Statistic (Unconditional Bernoulli), switching to boost 1.70.0